--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -1,28 +1,10 @@
 ---
-title: "home"
+title: "欢迎"
 bg: white
 color: black
 style: center
 ---
 
-### *whoa, hey an open-source*
-{: .text-purple}
+# 杭州瓦良格智造有限公司
 
-<span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
-  <i class="fa fa-circle fa-stack-2x text-white"></i>
-  <i class="fa fa-bicycle fa-stack-1x text-orange"></i>
-</span>
-
-# single-page jekyll theme
-{: .text-purple}
-
-
-…it's focused on delivering information quickly, easily, configurably, and stylishly!
-
-Want to make a single-page site to show off something cool? Go [fork me on github!](https://github.com/t413/SinglePaged)
-
-<span id="forkongithub">
-  <a href="{{ site.source_link }}" class="bg-blue">
-    Fork me on GitHub
-  </a>
-</span>
+## 杭州瓦良格智造有限公司，成立于2015年12月，原名：广州瓦良格机器人有限公司，技术依托于浙江大学电气学院、浙江大学华南技术研究院机器人与自动化研究中心、浙江大学华硕实验室，工业互联网解决方案提供商，致力于智能传感器、控制器、 通信设备等的研发，构建了基于工业互联网、大数据、云计算和AI技术的专业化服务平台，2020年12月，国家高新技术企业
